fixed z-index for menu btn

--- a/styles/_sidebar.sass
+++ b/styles/_sidebar.sass
@@ -8,7 +8,7 @@
   color: #fff
   background: rgba(52, 58, 64, 0.5)
   line-height: 50px
-  z-index: 999
+  z-index: 1002
   display: flex
   flex-direction: column
   justify-content: center
