--- a/styles/main.css
+++ b/styles/main.css
@@ -565,7 +565,7 @@ a.faq__item-text:hover {
   color: #fff;
   background: rgba(52, 58, 64, 0.5);
   line-height: 50px;
-  z-index: 999;
+  z-index: 1002;
   display: flex;
   flex-direction: column;
   justify-content: center;
